SpriteKitテスト用のプロジェクト追加
TestSpriteKitプロジェクト追加

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 .DS_Store
+/MyImageView/MyImageView.xcodeproj/project.xcworkspace/xcuserdata/shutaro.xcuserdatad/UserInterfaceState.xcuserstate
+/TestSpriteKit/TestSpriteKit.xcodeproj/project.xcworkspace/xcuserdata/shutaro.xcuserdatad/UserInterfaceState.xcuserstate
