StorageTestにByteBuffer.swiftをコピー
・最新版のソースをコピー

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .DS_Store
 /MyImageView/MyImageView.xcodeproj/project.xcworkspace/xcuserdata/shutaro.xcuserdatad/UserInterfaceState.xcuserstate
 /TestSpriteKit/TestSpriteKit.xcodeproj/project.xcworkspace/xcuserdata/shutaro.xcuserdatad/UserInterfaceState.xcuserstate
+/swift_test/swift_test.xcodeproj/project.xcworkspace/xcuserdata/shutaro.xcuserdatad/UserInterfaceState.xcuserstate
+/StorageTest/StorageTest.xcodeproj/project.xcworkspace/xcuserdata/shutaro.xcuserdatad/UserInterfaceState.xcuserstate
